# hw3-brycenm7

./: Makefile  myst.yml  pyproject.toml
data/: GW150914_data.csv
ligotools/: utils.py
ligotools/ligotools/tests/: test_utils.py
ligotools/tests/: test_readligo.py
