[build-system]
requires = ["setuptools >= 70", "numpy==2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
authors = [
  { name="Ligo Scientific Collaboration (LSC) and Brycen Manners", email="brycenmanners@berkeley.edu" },
]
description = "A Python library to read LIGO data"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "numpy==2.0",
    "scipy==1.13",
    "h5py==3.12",
    "matplotlib==3.9",
    "scipy==1.13",
    "ipykernel==6.29"
]

license = "BSD-3-Clause"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

keywords = ["tools", "readligo"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-brycenm7"
Issues = "https://github.com/UCB-stat-159-f25/hw3-brycenm7/issues"

[tool.setuptools]
packages = ["ligotools"]
